Fix overflow

--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -3,6 +3,8 @@ header {
     top: 0;
     width: 100%;
     transition: background-color 0.3s ease;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .header__headband,
